--- a/module2assignment/index.html
+++ b/module2assignment/index.html
@@ -14,6 +14,7 @@
                 <div class="box-inner">
                     <div id="chicken" class="topic">Chicken</div>
                     <p>Why did the chicken cross the road?  Don't worry, it has nothing to do with being on the menu.</p>
+                    <p>It's okay to chuckle to yourself. :-)</p>
                 </div>
             </div>
             <div class="col-lg-4 col-md-6 col-sm-12 box-outer">
@@ -25,8 +26,10 @@
             <div class="col-lg-4 col-md-6 col-sm-12 box-outer entireRow">
                 <div class="box-inner">
                     <div id="sushi" class="topic">Sushi</div>
-                    <p>Some love fish.  Some love to eat dead fish.  Some eat fish raw.  It takes all kinds.</p>
-                    <p>Some love fish.  Some love to eat dead fish.  Some eat fish raw.  It takes all kinds.</p>
+                    <p>Some love fish.</p>
+                    <p>Some love to eat dead fish.</p>
+                    <p>Some eat fish raw.</p>
+                    <p>It takes all kinds.</p>
                 </div>
             </div>
         </div>
